--- a/admin.html
+++ b/admin.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>SalesLda - Admin</title>
+    <title>SalesLda - Administração</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Gestão de Vendedores</h2>
-    <div class="card">
-        <input type="text" id="vendedorNif" placeholder="NIF (Chave Única)">
-        <input type="text" id="vendedorNome" placeholder="Nome">
-        <input type="email" id="vendedorEmail" placeholder="Email">
-        <button id="btnSalvar">Salvar Vendedor</button>
-    </div>
+    <div class="container">
+        <h1>Painel Administrativo</h1>
+        <p>Bem-vindo ao controlo da SalesLda.</p>
 
-    <table border="1" style="width:100%; margin-top:20px;">
-        <thead>
-            <tr><th>NIF</th><th>Nome</th><th>Estado</th><th>Ações</th></tr>
-        </thead>
-        <tbody id="tabelaCorpo"></tbody>
-    </table>
+        <div class="card">
+            <h3>Criar / Editar Vendedor</h3>
+            <input type="text" id="vendedorNif" placeholder="NIF (ID Único)">
+            <input type="text" id="vendedorNome" placeholder="Nome Completo">
+            <input type="email" id="vendedorEmail" placeholder="Email do Vendedor">
+            <button id="btnSalvar" class="btn-primary">Salvar Vendedor</button>
+        </div>
+
+        <h3>Lista de Vendedores</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>NIF</th>
+                    <th>Nome</th>
+                    <th>Estado</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody id="tabelaCorpo"></tbody>
+        </table>
+    </div>
     <script type="module" src="admin.js"></script>
 </body>
 </html>
