Reset robusto do login

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SalesLda - Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="login-box">
-        <h1>SalesLda</h1>
-        <p>Aceda ao seu painel de gestão</p>
-        <input type="email" id="email" placeholder="E-mail">
-        <input type="password" id="password" placeholder="Palavra-passe">
-        <button id="loginBtn">Entrar</button>
-        <p id="message"></p>
+    <div class="card">
+        <h2>Acesso SalesLda</h2>
+        <input type="email" id="email" placeholder="Email">
+        <input type="password" id="senha" placeholder="Senha">
+        <button id="btnEntrar">Entrar</button>
+        <p id="mensagem"></p>
     </div>
     <script type="module" src="auth.js"></script>
 </body>
