--- a/admin.html
+++ b/admin.html
@@ -3,51 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SalesLda - Administração</title>
+    <title>SalesLda - Admin</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav-bar" style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; background: #2c3e50; color: white;">
-        <span style="font-weight: bold;">SalesLda - Painel Administrativo</span>
-        <button id="btnLogout" style="background: #e74c3c; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer; font-weight: bold;">Sair</button>
+
+    <div class="nav-bar" style="display: flex; justify-content: space-between; align-items: center; padding: 15px 20px; background: #2c3e50; color: white;">
+        <span style="font-weight: bold;">SalesLda Admin</span>
+        <button id="btnLogout" style="background: #e74c3c; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer;">Sair</button>
     </div>
 
-    <div class="container" style="max-width: 900px; margin: 20px auto; padding: 0 20px;">
+    <div class="container">
         
-        <div class="card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 20px;">
+        <div class="card">
             <h3>Ficha do Vendedor</h3>
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-                <input type="text" id="vendedorNif" placeholder="NIF (Chave Única)" style="padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
-                <input type="text" id="vendedorNome" placeholder="Nome Completo" style="padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
-                <input type="email" id="vendedorEmail" placeholder="E-mail" style="padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+            <div class="grid-form">
+                <input type="text" id="vendedorNif" placeholder="NIF (ID único)">
+                <input type="text" id="vendedorNome" placeholder="Nome Completo">
+                <input type="email" id="vendedorEmail" placeholder="E-mail">
                 <div style="display: flex; gap: 10px;">
-                    <button id="btnSalvar" style="background: #27ae60; color: white; border: none; padding: 10px; border-radius: 4px; cursor: pointer; flex: 1;">Salvar</button>
-                    <button id="btnLimpar" style="background: #95a5a6; color: white; border: none; padding: 10px; border-radius: 4px; cursor: pointer; flex: 1;">Limpar/Novo</button>
+                    <button id="btnSalvar" class="btn-primary" style="flex: 2;">Salvar</button>
+                    <button id="btnLimpar" class="btn-clear" style="flex: 1;">Limpar</button>
                 </div>
             </div>
         </div>
 
-        <div class="card" style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 20px;">
-            <h3>Pesquisar por NIF</h3>
-            <div style="display: flex; gap: 10px;">
-                <input type="text" id="pesquisaNif" placeholder="Introduza o NIF..." style="padding: 10px; border: 1px solid #ddd; border-radius: 4px; flex: 1;">
-                <button id="btnPesquisar" style="background: #3498db; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer;">Procurar</button>
+        <div class="card">
+            <h3>Pesquisa Rápida</h3>
+            <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                <input type="text" id="pesquisaNif" placeholder="NIF para procurar" style="flex: 2; min-width: 150px;">
+                <button id="btnPesquisar" class="btn-secondary" style="flex: 1;">Procurar</button>
             </div>
         </div>
 
-        <h3 style="margin-top: 30px;">Vendedores Registados</h3>
-        <table style="width: 100%; border-collapse: collapse; background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
-            <thead style="background: #f8f9fa;">
-                <tr>
-                    <th style="padding: 12px; text-align: left; border-bottom: 2px solid #ddd;">NIF</th>
-                    <th style="padding: 12px; text-align: left; border-bottom: 2px solid #ddd;">Nome</th>
-                    <th style="padding: 12px; text-align: left; border-bottom: 2px solid #ddd;">Estado</th>
-                    <th style="padding: 12px; text-align: left; border-bottom: 2px solid #ddd;">Ações</th>
-                </tr>
-            </thead>
-            <tbody id="tabelaCorpo">
-                </tbody>
-        </table>
+        <h3>Vendedores Registados</h3>
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>NIF</th>
+                        <th>Nome</th>
+                        <th>Estado</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="tabelaCorpo"></tbody>
+            </table>
+        </div>
     </div>
 
     <script type="module" src="admin.js"></script>
